--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -1,4 +1,4 @@
-<view  style="padding: 0 0 50px;">
+<view>
 
   <view class='message'>
     <view class='form'>
@@ -39,7 +39,7 @@
           <view class="label">是否置顶</view>
           <switch name="switch" style="position:relative; left: 100px; margin: 5px 0;" />
         </view> -->
-        <view bindtap='showDialog'>发布须知</view>
+        <view bindtap='showDialog' style="font-size: 24rpx; color: #000; font-weight:bold; margin: 10px 0 0;"><image style="width: 30rpx; height: 30rpx; float:left; margin: 2px 3px 0 0;" src="{{wenImage}}"></image>发布须知</view>
         <button form-type="submit">提交审核</button>
       </form>
     </view>
@@ -48,7 +48,10 @@
 
 <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
 <view class="modal-dialog" wx:if="{{showModal}}">
-  <view class="modal-title">发布须知</view>
+  <view class="modal-title">
+   
+    发布须知
+  </view>
   <view class="modal-content">
     <view class="modal-input">
       <text>山东分局啊赛捷东方 i阿斯顿放辣椒水都放假哦啊啥的肌肤 i 哦叫阿松大家佛 is 的肌肤</text>
