--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -41,10 +41,10 @@
     </view>
   </view>
   <view style="padding: 40rpx 0; background: #fff; margin: 0 0 10px;">
-    <view style="padding: 0 40rpx 20rpx; line-height: 1; color: #da4062;"><image style="width: 40rpx; height: 30rpx; float: left; margin: 0 10rpx 0 0;"  src="{{labaImage}}"></image>智慧城市A全国版，各市县前100名免费入驻啦！</view>
+    <view style="padding: 0 40rpx 20rpx; line-height: 1; color: #da4062;"><image style="width: 40rpx; height: 30rpx; float: left; margin: 0 10rpx 0 0;"  src="{{labaImage}}"></image>{{notice}}</view>
     <view class='flexRowContainer'>
       <view class='flexRowSon'><image style="width: 330rpx; height: 154rpx;"  src="{{adsImage1}}"></image></view>
-      <view class='flexRowSon'><image style="width: 330rpx; height: 154rpx;"  src="{{adsImage2}}"></image></view>
+      <view class='flexRowSon'><image bindtap='redirctToAgencyList' style="width: 330rpx; height: 154rpx;"  src="{{adsImage2}}"></image></view>
     </view>
   </view>
   <view style='display:flex;justify-content:center;font-size: 32rpx; padding: 30rpx 0 0; background: #fff; color: #da4062; font-weight: bold;'>推荐产品</view>
