--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -8,7 +8,6 @@
 }
 
 .header {
-  background-color: #0097fe;
   height: 100rpx;
   display: flex;
   justify-content: center;
@@ -20,7 +19,7 @@
 .search {
   display: flex;
   height: 50rpx;
-  width: 80%;
+  width: 90%;
   background-color: white;
   border-radius:50rpx; 
 }
@@ -61,9 +60,33 @@
 .divLine1{
  width: 100%;
  height: 3rpx;
+ background: #bdbdbd;
 }
 
 .divLine2{
  width: 100%;
  height: 8rpx;
+}
+.name{
+  padding: 8px 0 8px 20px;
+  display: block;
+}
+.search-result-product .name{
+  padding-left: 25px;
+}
+.search-result-agency,
+.search-result-product{
+  position:relative;
+}
+.i-searchcion{
+  position: absolute; 
+  left: 0;
+  top: 12px;
+}
+.itemimage{
+  position: absolute; 
+  left: 0;
+  top: 12px;
+  width: 36rpx;
+  height: 36rpx;
 }
