--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -264,3 +264,34 @@ display: inline-block;
   top:17px;
   right: 10px;
 }
+
+.authheader {
+    margin: 90rpx 0 90rpx 50rpx;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    width: 650rpx;
+    height: 300rpx;
+    line-height: 450rpx;
+}
+ 
+.authheader image {
+    width: 200rpx;
+    height: 200rpx;
+}
+ 
+.authcontent {
+    margin-left: 50rpx;
+    margin-bottom: 90rpx;
+}
+ 
+.authcontent text {
+    display: block;
+    color: #9d9d9d;
+    margin-top: 40rpx;
+}
+ 
+.authbottom {
+    border-radius: 80rpx;
+    margin: 70rpx 50rpx;
+    font-size: 35rpx;
+}
