--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,21 @@
 <view wx:if="{{isNotAuthorized}}">
   <view wx:if="{{canIUse}}">
-    <view class='header'>
+    <view class='authheader'>
+      <image src='/images/logo.jpg'></image>
     </view>
 
-    <view class='content'>
+    <view class='authcontent'>
       <view>申请获取以下权限</view>
       <text>获得你的公开信息(昵称，头像等)</text>
     </view>
 
-    <button class='bottom' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
+    <button class='authbottom' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
       授权登录
     </button>
   </view>
   <view wx:else>请升级微信版本</view>
 </view>
-<view class="container_index">
+<view wx:else class="container_index">
   <view class='exceptProduct'>
     <view class='header'>
       <view class="location" bindtap='{{isCooperation==true?"changeLocation":""}}'>
