--- a/pages/goodsDetail/goodsDetail.wxss
+++ b/pages/goodsDetail/goodsDetail.wxss
@@ -1,1 +1,27 @@
 /* pages/goodsDetail/goodsDetail.wxss */
+.title{
+	font-size: 32rpx;
+	font-weight: bold;
+	margin: 8px 0;
+}
+.price{
+	color: #e6424b;
+	font-size: 32rpx;
+	margin-bottom: 6px;
+}
+.section-title{
+	text-align: center;
+	font-size: 32rpx;
+	margin: 0 0 20px;
+}
+.booking{
+	position: fixed;
+	bottom:0;
+	left:0;
+	color:#fff;
+	background: #ff7419;
+	width: 100%;
+	text-align: center;
+	padding: 18rpx 0;
+	font-size: 32rpx;
+}
