--- a/pages/partner/partner.wxml
+++ b/pages/partner/partner.wxml
@@ -1,2 +1,44 @@
-<!--pages/partner/partner.wxml-->
-<text>pages/partner/partner.wxml</text>
+<view>
+  <view>
+    <image src="/../../images/合伙人.jpeg"></image>
+    <view>欢迎加入曹县代理商，请填写申请信息</view>
+  </view>
+
+  <view class='form'>
+    <form bindsubmit="formSubmit" report-submit='true'>
+        <view class='form-item'>
+            <text class='label'>邀请人</text> 
+            <input name="introduceName" placeholder="联系人姓名"></input>
+        </view>
+        <view class='form-item'>
+            <text class='label'>姓名</text> 
+            <input name="partnerName" placeholder="联系人姓名"></input>
+        </view>
+        <view class='form-item'>
+            <text class='label'>手机号</text> 
+            <input type="number" name="mobilephone" placeholder="请填写手机号码"></input>
+        </view>
+        <radio value="" checked="{{isChecked}}" bindtap='agreeNotice'/>
+        <view bindtap='showDialog' style="font-size: 24rpx; color: #000; font-weight:bold; margin: 10px 0 0;"><image style="width: 30rpx; height: 30rpx; float:left; margin: 2px 3px 0 0;" src="{{wenImage}}"></image>合伙人须知</view>
+        <view>合伙人加入费用为{{partnerFee}}元</view>
+        <view>您的粉丝付费发布、置顶、入驻、加入合伙人等，您可获得提成</view>
+        <button form-type="submit">立刻成为合伙人</button>
+      </form>
+  </view>
+</view>
+
+<view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
+<view class="modal-dialog" wx:if="{{showModal}}">
+  <view class="modal-title">
+   
+    合伙人须知
+  </view>
+  <view class="modal-content">
+    <view class="modal-input">
+      <text>山东分局啊赛捷东方 i阿斯顿放辣椒水都放假哦啊啥的肌肤 i 哦叫阿松大家佛 is 的肌肤</text>
+    </view>
+  </view>
+  <view class="modal-footer">
+    <view class="btn-confirm" bindtap="onConfirm" data-status="confirm">确定</view>
+  </view>
+</view>
