--- a/pages/agencyCenter/agencyCenter.wxml
+++ b/pages/agencyCenter/agencyCenter.wxml
@@ -1,5 +1,81 @@
 <view>
+  <view class="mine-top">
+    <image src='../../images/开心果.png' class='avatar'></image>
+    <view>
+      <view>
+        <text>0个</text>
+        <text>今日订单</text>
+      </view>
+      <view>
+        <text>0.00元</text>
+        <text>余额</text>
+      </view>
+      <view>
+        <text>12次</text>
+        <text>访问量</text>
+      </view>
+    </view>
+  </view>
+  <view class="weui-panel panel-myorder">
+    <view class="media-box">
+      <view class="media-box-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="media-box-bd">我的订单</view>
+    </view>
+    <view class="order-tab">
+      <image src="{{orderImage1}}"></image>
+      <view>待付款</view>
+    </view>
+    <view class="order-tab">
+      <image src="{{orderImage2}}"></image>
+      <view>待发货</view>
+    </view>
+    <view class="order-tab">
+      <image src="{{orderImage4}}"></image>
+      <view>已完成</view>
+    </view>
+    <view class="order-tab">
+      <image src="{{orderImage5}}"></image>
+      <view>售后</view>
+    </view>
+  </view>
+
   <view>
-    
+    <view class="media-box">
+      <view class="media-box-bd">今日收益</view>
+    </view>
+    <view class="media-box">
+      <view class="media-box-bd">昨日收益</view>
+    </view>
+    <view class="media-box">
+      <view class="media-box-bd">总收益</view>
+    </view>
+    <view class="media-box">
+      <view class="media-box-bd">可体现</view>
+    </view>
+    <button>提现</button>
+  </view>
+
+  <view>
+    <text>推广</text>
+    <view>
+      <text>广告位购买</text>
+      <text>暂未开通线上购买，请联系客服</text>
+    </view>
+  </view>
+
+  <view>
+    <text>店铺设置</text>
+    <view class='weui-panel panel-myorder'>
+      <view class="order-tab">
+        <image src="{{orderImage4}}"></image>
+        <view>修改资料</view>
+      </view>
+      <view class="order-tab">
+        <image src="{{orderImage4}}"></image>
+        <view>商家续费</view>
+      </view>
+    </view>
   </view>
 </view>
