--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -14,7 +14,7 @@
 	margin: 0 0 10rpx 0;
 }
 .username{
-	color: #fff;
+	color: rgb(5, 5, 5);
 	display: block;
 	text-align: center;
 	font-size: 28rpx;
