--- a/app.wxss
+++ b/app.wxss
@@ -4,7 +4,7 @@ page{
   background: #f1f1f1;
   padding: 0  20px;
   box-sizing: border-box;
-  font-size: 18px;
+  font-size: 36rpx;
 }
 .container {
   height: 100%;
