--- a/pages/agencyCenter/agencyCenter.wxss
+++ b/pages/agencyCenter/agencyCenter.wxss
@@ -2,8 +2,8 @@
 .mine-top{
 	text-align: center;
 	position: relative;
-	padding: 60rpx 0;
-	margin: 0 -40rpx;
+	padding: 60rpx 0 0;
+	margin: 0 -40rpx 10px;
 }
 .avatar{
 	border-radius:200px;
@@ -19,23 +19,90 @@
 	text-align: center;
 	font-size: 28rpx;
 }
-.panel-myorder .media-box-hd{
-	width:60rpx;
-	height:60rpx;
+.panel-myorder{
+	overflow: hidden;
+	border-top: 1px solid #dedede;
 }
-.panel-myorder .media-box-bd{
-	line-height: 60rpx;
+.panel-myorder .title{
+	line-height: 80rpx;
+	text-align: left;
+	padding-left: 40rpx;
+	color: #000;
 }
 .order-tab{
-	width: 20%;
+	width: 25%;
 	float: left;
 	text-align: center;
 	font-size: 28rpx;
+	color: #969698;
 	padding: 30rpx 0;
 }
 .order-tab image{
 	width: 64rpx;
 	height: 64rpx;
 	margin: 0 0 4rpx 0;
-
+}
+.part1{
+	background: #fff;
+	overflow: hidden;
+	padding: 40rpx 0;
+}
+.part1 .item{
+	width: 250rpx;
+	float:left;
+}
+.part1 .item view {
+	font-size: 48rpx;
+}
+.part1 .item text{
+	font-size: 32rpx;
+}
+.panel-myorder{
+	background: #fff;
+}
+.panel-yue,
+.panel-edit,
+.promote{
+	background: #fff;
+	margin: 0 -40rpx 10px;
+	padding: 40rpx 40rpx;
+	overflow: hidden;
+}
+.panel-yue .item{
+	width: 134rpx;
+	float: left;
+	font-size: 28rpx;
+	text-align: center;
+	color: #969698;
+	border-right: 1px solid #dedede;
+}
+.panel-yue .item text{
+	color: #000;
+}
+.panel-yue button{
+	width: 102rpx;
+	font-size: 28rpx;
+	padding: 0;
+	background: #fe5f41;
+	color: #fff;
+	margin-top: 10rpx;
+}
+.panel-yue .title,
+.panel-edit .title,
+.promote .title{
+	line-height: 80rpx;
+	text-align: left;
+	color: #000;
+	border-bottom: 1px solid #dedede;
+	margin-bottom: 20px;
+	padding-bottom: 10px;
+	line-height: 1;
+}
+.panel-edit .order-tab{
+	padding: 0;
+	color: #333;
+}
+.promote{
+	color:#333;
+	font-size: 32rpx;
 }
