--- a/pages/nearbyAgencySignin/nearbyAgencySignin.wxml
+++ b/pages/nearbyAgencySignin/nearbyAgencySignin.wxml
@@ -67,12 +67,12 @@
         <view class='form-item' style="clear:both; border-top:2rpx solid #dedede;">
             <text class='label'>电话</text> 
             <input name="mobilephone" placeholder="联系人电话" style="padding-right: 160rpx;"></input>
-            <view style="position:absolute; right: 0; top:12rpx; color:#fff; background:#ff7419;padding: 2px 8px; border-radius: 5px;">发送验证码</view>
+            <!-- <view style="position:absolute; right: 0; top:12rpx; color:#fff; background:#ff7419;padding: 2px 8px; border-radius: 5px;">发送验证码</view> -->
         </view>
-        <view class='form-item'>
+        <!-- <view class='form-item'>
           <text class='label'>验证码</text>
           <input name="validateCode"></input>
-        </view>
+        </view> -->
         <text class='label'>入驻时长</text>
         <view>
           <radio-group name="time" class="radio-group" bindchange="radioChange">
