--- a/pages/partner/partner.wxml
+++ b/pages/partner/partner.wxml
@@ -22,7 +22,7 @@
           <radio value="" checked="{{isChecked}}" bindtap='agreeNotice'/>
           我已阅读并同意<text style="color:#e6424b;">《合伙人须知》</text>
         </view>
-        <view style="color: #999;">合伙人加入费用为 <text style="color:#e6424b;">{{partnerFee}}元</text></view>
+        <!-- <view style="color: #999;">合伙人加入费用为 <text style="color:#e6424b;">{{partnerFee}}元</text></view> -->
         <view style="color: #999;">您的粉丝付费发布、置顶、入驻、加入合伙人等，您可获得提成。</view>
         <button form-type="submit">立刻成为合伙人</button>
       </form>
