--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -33,7 +33,7 @@
         <view class='form-item' style="padding-right: 60rpx;">
           <text class='label'>详细地址</text>
           <input name="address" value='{{addressDetail}}'></input>
-          <image style="width: 36rpx; height: 46rpx; position: absolute; right: 16rpx; top: 16rpx;"  src="{{dingwei}}"></image>
+          <image style="width: 36rpx; height: 46rpx; position: absolute; right: 16rpx; top: 16rpx;" src="{{dingwei}}" bindtap='chooseAddress'></image>
         </view>
         <!-- <view class="form-item">
           <view class="label">是否置顶</view>
