--- a/pages/buyRecommend/buyRecommend.wxss
+++ b/pages/buyRecommend/buyRecommend.wxss
@@ -8,13 +8,10 @@ button{
 	color:#fff;
 	border: none;
 	line-height:2.2;
-	margin:0;
-	font-size: 32rpx;
+	margin: 30px 0 0;
+	font-size: 40rpx;
 	border-radius: 0;
 	width: 100%;
-	position: fixed;
-	left:0;
-	bottom: 0;
 	border: 0;
 }
 
@@ -44,19 +41,19 @@ button{
 	width:100%;
 	border-bottom: 2rpx solid #dedede;
 	position:relative;
-	font-size:28rpx;
+	font-size:36rpx;
 }
 .form .form-item .label{
 	position:absolute;
 	left:0;
-	line-height:80rpx;
+	line-height:100rpx;
 }
 .form .form-item .label text,
 .textarea-label text{
 	color: red;
 }
 .form .form-item input{
-	height: 80rpx;
+	height: 100rpx;
 	padding-left: 135rpx;
 }
 .form .form-item textarea{
@@ -70,19 +67,6 @@ button{
 .textarea-label{
 	line-height: 80rpx;
 }
-
-.the-label{ width: 100%; background-color: #fff; padding: 70rpx 30rpx 40rpx; box-sizing: border-box; margin-bottom: 20rpx;}
-.the-label .th{ width: 100%; overflow: hidden; }
-.the-label .th .ti{ font-size: 30rpx;}
-.the-label .th .tt{ color: #b2b2b2; font-size: 24rpx; }
-.the-label .list{ width: 100%; overflow: hidden; margin-top: 48rpx;}
-.the-label .list .li{ padding: 0 25rpx; height: 60rpx; line-height: 60rpx; border: 1px solid #f0f0f0;  border-radius: 10rpx; 
-overflow: hidden; font-size: 26rpx; color: #808080; float: left; margin: 0 17rpx 17rpx 0; position: relative;}
-.the-label .list .li.cur{ color: #55beb7; border-color: #55beb7;}
-
-
-.seled{ width: 100%; margin-top: 30rpx; color: #666; font-size: 28rpx; padding: 0 30rpx; box-sizing: border-box;}
-.seled .sel-v{ color: #f00; font-weight: 700; font-size: 30rpx; margin-top: 20rpx; }
 
 .modal-mask {
   width: 100%;
@@ -127,6 +111,7 @@ overflow: hidden; font-size: 26rpx; color: #808080; float: left; margin: 0 17rpx
   font-size: 28rpx;
 }
 
+
 .input {
   width: 100%;
   height: 82rpx;
@@ -162,8 +147,4 @@ input-holder {
   width: 100%;
   color: #ec5300;
   text-align: center;
-}
-
-.picker{
-	line-height:80rpx;
 }
