--- a/pages/nearbyAgencySignin/nearbyAgencySignin.wxss
+++ b/pages/nearbyAgencySignin/nearbyAgencySignin.wxss
@@ -83,3 +83,7 @@ overflow: hidden; font-size: 26rpx; color: #808080; float: left; margin: 0 17rpx
 
 .seled{ width: 100%; margin-top: 30rpx; color: #666; font-size: 28rpx; padding: 0 30rpx; box-sizing: border-box;}
 .seled .sel-v{ color: #f00; font-weight: 700; font-size: 30rpx; margin-top: 20rpx; }
+
+.picker{
+	line-height:80rpx;
+}
