--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -4,19 +4,21 @@
     <view class='search'>
       <icon class="searchcion" size='20' type='search'></icon>
       <input class='searchInput' placeholder='请输入关键字' placeholder-class='searchInputText' value='{{searchContent}}' bindinput='search'></input>
-      <icon wx:if="{{canClear}}" type='clear' size='45rpx' class='search-clear' bindtap='clearInputText'></icon>
+      <icon wx:if="{{canClear}}" type='clear' size='45rpx' class='search-clear' value='{{searchContent}}' bindtap='clearInputText'></icon>
     </view>
   </view>
   <view class='search-result'>
     <view class='search-result-agency' wx:for="{{resultAgencyList}}" wx:key="{{item.id}}" data-agency-id='item.agencyId' bindtap='openAgency'>
       <icon class="i-searchcion" size='12' type='search'></icon>
+      <image class="itemimage" src='{{item.logoImagePath}}'></image>
       <text class='name' data-agency-id='{{item.id}}' bindtap='getAgencyInfo'>{{item.agencyName}}</text>
       <view class="divLine1"></view>
     </view>
     <view class="divLine2"></view>
 
     <view class='search-result-product' wx:for="{{resultGoodsList}}" wx:key="{{item.id}}" data-goods-id='item.goodsId' bindtap='openGoods'>
-      <image class="itemimage" src='{{item.agencyLogo}}'></image>
+      <icon class="i-searchcion" size='12' type='search'></icon>
+      <image class="itemimage" src='{{item.thumbnail}}'></image>
       <text class='name' data-product-id='{{item.id}}' bindtap='getProductInfo'>{{item.goodsName}} | <text class="content">{{item.goodsDescription}}</text></text>
       <view class="divLine1"></view>
     </view>
